--- a/views/projects/TIBI.ejs
+++ b/views/projects/TIBI.ejs
@@ -6,16 +6,20 @@
     <%= title %>
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%- include('partials/styles'); %>
+  <%- include('../partials/styles'); %>
 </head>
 
 <body>
-  <%- include('partials/header'); %>
+  <%- include('../partials/header'); %>
     <div class="p-5">
       <h2>TIBI</h2>
       <h5>Wireframes created in Figma</h5>
     </div>
-    <h4 class="p-5 text-center">Login</h4>
+    <div class="d-flex justify-content-around">
+      <div class="w-50">
+        <h3 class="p-2">Login</h3>
+      </div>
+    </div>
     <div class="d-flex justify-content-around mb-5">
       <div id="carouselLogin" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -29,25 +33,25 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/TIBI/login1.png" class="d-block w-100" alt="login1.png">
+            <img src="/images/projects/TIBI/login1.png" class="d-block w-100" alt="login1.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login2.png" class="d-block w-100" alt="login2.png">
+            <img src="/images/projects/TIBI/login2.png" class="d-block w-100" alt="login2.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login3.png" class="d-block w-100" alt="login3.png">
+            <img src="/images/projects/TIBI/login3.png" class="d-block w-100" alt="login3.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login4.png" class="d-block w-100" alt="login4.png">
+            <img src="/images/projects/TIBI/login4.png" class="d-block w-100" alt="login4.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login5.png" class="d-block w-100" alt="login5.png">
+            <img src="/images/projects/TIBI/login5.png" class="d-block w-100" alt="login5.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login6.png" class="d-block w-100" alt="login6.png">
+            <img src="/images/projects/TIBI/login6.png" class="d-block w-100" alt="login6.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/login7.png" class="d-block w-100" alt="login7.png">
+            <img src="/images/projects/TIBI/login7.png" class="d-block w-100" alt="login7.png">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselLogin" data-bs-slide="prev">
@@ -60,7 +64,11 @@
         </button>
       </div>
     </div>
-    <h4 class="p-5 text-center">Dashboard</h4>
+    <div class="d-flex justify-content-around">
+      <div class="w-50">
+        <h3 class="p-2">Dashboard</h3>
+      </div>
+    </div>
     <div class="d-flex justify-content-around mb-5">
       <div id="carouselDashboard" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -77,34 +85,34 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/TIBI/dashboard1.png" class="d-block w-100" alt="dashboard1.png">
+            <img src="/images/projects/TIBI/dashboard1.png" class="d-block w-100" alt="dashboard1.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard2.png" class="d-block w-100" alt="dashboard2.png">
+            <img src="/images/projects/TIBI/dashboard2.png" class="d-block w-100" alt="dashboard2.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard3.png" class="d-block w-100" alt="dashboard3.png">
+            <img src="/images/projects/TIBI/dashboard3.png" class="d-block w-100" alt="dashboard3.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard4.png" class="d-block w-100" alt="dashboard4.png">
+            <img src="/images/projects/TIBI/dashboard4.png" class="d-block w-100" alt="dashboard4.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard5.png" class="d-block w-100" alt="dashboard5.png">
+            <img src="/images/projects/TIBI/dashboard5.png" class="d-block w-100" alt="dashboard5.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard6.png" class="d-block w-100" alt="dashboard6.png">
+            <img src="/images/projects/TIBI/dashboard6.png" class="d-block w-100" alt="dashboard6.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard7.png" class="d-block w-100" alt="dashboard7.png">
+            <img src="/images/projects/TIBI/dashboard7.png" class="d-block w-100" alt="dashboard7.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard8.png" class="d-block w-100" alt="dashboard8.png">
+            <img src="/images/projects/TIBI/dashboard8.png" class="d-block w-100" alt="dashboard8.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard9.png" class="d-block w-100" alt="dashboard9.png">
+            <img src="/images/projects/TIBI/dashboard9.png" class="d-block w-100" alt="dashboard9.png">
           </div>
           <div class="carousel-item">
-            <img src="/images/TIBI/dashboard10.png" class="d-block w-100" alt="dashboard10.png">
+            <img src="/images/projects/TIBI/dashboard10.png" class="d-block w-100" alt="dashboard10.png">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselDashboard" data-bs-slide="prev">
@@ -118,21 +126,27 @@
       </div>
     </div>
 
-    <%- include('partials/footer'); %>
+    <%- include('../partials/footer'); %>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script src="/js/bootstrap.bundle.min.js"></script>
       <script type="module">
-
+        $(document).on('click', 'img', function() {
+          window.open(this.src);
+        })
       </script>
 </body>
 
 <style>
   .carousel {
-    max-width: 70%;
+    max-width: 50%;
   }
 
   .carousel-inner {
     border-radius: 2em;
+  }
+
+  .carousel-item > img {
+    cursor: pointer;
   }
 </style>
 
