--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
       <img src="/images/actions-background.png" alt="background image" />
       <div class="overlay">
         <div>
-          <button type="button" class="btn btn-actions">
+          <button type="button" class="btn btn-actions" data-src="/projects">
             <h3>Portfolio</h3>
           </button>
           <button type="button" class="btn btn-actions">
@@ -64,32 +64,38 @@
           </button>
         </div>
         <div>
-          <button type="button" class="btn btn-actions">
+          <button type="button" class="btn btn-actions" data-src="/work-history">
             <h3>Experience</h3>
           </button>
-          <button type="button" class="btn btn-actions">
+          <button type="button" class="btn btn-actions" data-src="/about">
             <h3>About</h3>
           </button>
         </div>
       </div>
     </div>
     <div id="actions-mobile" class="flex-column align-items-center">
-      <button type="button" class="btn btn-actions">
+      <button type="button" class="btn btn-actions" data-src="/projects">
         <h3>Portfolio</h3>
       </button>
       <button type="button" class="btn btn-actions">
         <h3>Certifications</h3>
       </button>
-      <button type="button" class="btn btn-actions">
+      <button type="button" class="btn btn-actions" data-src="/work-history">
         <h3>Experience</h3>
       </button>
-      <button type="button" class="btn btn-actions">
+      <button type="button" class="btn btn-actions" data-src="/about">
         <h3>About</h3>
       </button>
     </div>
   </div>
 
   <%- include('partials/footer'); %>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $('button').on('click', function() {
+      window.location = $(this).data('src')
+    })
+  </script>
 </body>
 
 </html>
