--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <div id="footer" class="row">
     <div class="d-flex flex-row justify-content-around">
         <a href="/">Home</a>
-        <a href="/portfolio">Portfolio</a>
-        <a href="/experience">Experience</a>
+        <a href="/projects">Portfolio</a>
+        <a href="/work-history">Experience</a>
         <a href="/about">About Me</a>
     </div>
 </div>
@@ -20,6 +20,7 @@
   font-size: 30px;
   margin-top: 1em;
   margin-bottom: 1em;
+  text-decoration: none!important;
 }
 
 </style>
