--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -72,10 +72,10 @@
         <div class="col-lg-4 col-md-6 col-sm-12 p-3">
           <div class="card">
             <div class="d-flex justify-content-around image-container">
-              <img src="/images/logos/katieWiessfelt.png" class="card-img-top" alt="Skill Demonstrations">
+              <img src="/images/logos/katieWiessfelt.png" class="card-img-top" alt="Personal Projects">
             </div>
             <div class="card-body">
-              <h5 class="card-title">Skill Demonstrations</h5>
+              <h5 class="card-title">Personal Projects</h5>
               <div class="card-text">
                 <div class="snippet">
                   
@@ -89,7 +89,7 @@
               </div>
             </div>
             <ul class="description list-group list-group-flush">
-              <li class="list-group-item">Bed and Biscuits <small><a href="https://github.com/katiewiessfelt/bed-and-biscuits">Github</a> | <a href="https://katiewiessfelt.github.io/bed-and-biscuits/">Site</a></small></li>
+              <li class="list-group-item">Bed and Biscuits <small><a href="/projects/bed-and-biscuits">Wireframes</a> | <a href="https://github.com/katiewiessfelt/bed-and-biscuits">Github</a> | <a href="https://katiewiessfelt.github.io/bed-and-biscuits/">Site</a></small></li>
               <li class="list-group-item">Portfolio <small><a href="https://github.com/katiewiessfelt/portfolio">Github</a> | <a href="#">Site</a></small></li>
               <li class="list-group-item"><a href="https://github.com/katiewiessfelt/kattis">Kattis</a></li>
             </ul>
@@ -139,6 +139,7 @@
 
   .show-more, .show-less {
     cursor: pointer;
+    text-decoration: underline;
   }
 
   .description {
