--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,6 +52,7 @@
           applications.</h4>
       </div>
     </div>
+    <!-- desktop menu -->
     <div id="actions" class="image-wrapper">
       <img src="/images/actions-background.png" alt="background image" />
       <div class="overlay">
@@ -59,11 +60,6 @@
           <button type="button" class="btn btn-actions" data-src="/projects">
             <h3>Portfolio</h3>
           </button>
-          <button type="button" class="btn btn-actions">
-            <h3>Certifications</h3>
-          </button>
-        </div>
-        <div>
           <button type="button" class="btn btn-actions" data-src="/work-history">
             <h3>Experience</h3>
           </button>
@@ -73,12 +69,10 @@
         </div>
       </div>
     </div>
+    <!-- mobile menu -->
     <div id="actions-mobile" class="flex-column align-items-center">
       <button type="button" class="btn btn-actions" data-src="/projects">
         <h3>Portfolio</h3>
-      </button>
-      <button type="button" class="btn btn-actions">
-        <h3>Certifications</h3>
       </button>
       <button type="button" class="btn btn-actions" data-src="/work-history">
         <h3>Experience</h3>
