--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,8 @@
 <div id="footer" class="row">
-    <div class="d-flex flex-row justify-content-around">
-        <a href="/">Home</a>
-        <a href="/projects">Portfolio</a>
-        <a href="/work-history">Experience</a>
-        <a href="/about">About Me</a>
+    <div class="d-flex flex-column text-center py-4">
+        <p class="h3">Katie Wiessfelt</p>
+        <p class="h4">Web Developer</p>
+        <p class="h4"><a href="mailto: wiessfeltk90@gmail.com">Contact me</a></p>
     </div>
 </div>
 
@@ -13,14 +12,6 @@
   margin-top: 1em;
   background: rgba(255, 0, 245, .25);
   border-top: 2px solid var(--magenta);
-}
-
-#footer a {
-  color: white;
-  font-size: 30px;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  text-decoration: none!important;
 }
 
 </style>
