--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -24,9 +24,16 @@
             <div class="card-body">
               <h5 class="card-title">Castle CMS</h5>
               <div class="card-text">
-                <div class="snippet">Contributed to github repo</div>
+                <div class="snippet">
+                  Backend contributions in Python for CastleCMS, a custom content management system by Wildcard Corp.
+                </div>
                 <div class="description">
-                  <a href="https://castlecms.io">https://castlecms.io</a>
+                  I contributed Python code across several backend repositories supporting CastleCMS,
+                  a custom content management system developed by Wildcard Corp. My work focused on
+                  enhancing backend functionality, maintaining clean and scalable code, and ensuring
+                  smooth integration within the larger system architecture. This project deepened my
+                  experience working within established codebases and collaborating on enterprise-level
+                  software. <a href="https://castlecms.io">https://castlecms.io</a>
                 </div>
                 <div class="pt-2 d-flex flex-row-reverse align-self-end">
                   <small class="show-more">Show More</small>
@@ -53,10 +60,15 @@
               <h5 class="card-title">TIBI</h5>
               <div class="card-text">
                 <div class="snippet">
-                  Booking website, specifically for a salon
+                  Salon booking website with custom wireframes and frontend development.
                 </div>
                 <div class="description">
-                  Wireframes themes created in Figma
+                  I designed the initial user experience and interface themes for a salon
+                  booking website using Figma wireframes, focusing on clear navigation and
+                  ease of use. In addition to design, I contributed to the frontend
+                  implementation by coding responsive components and refining the UI to match
+                  the design vision. This project highlights my ability to translate design
+                  concepts into functional, user-friendly interfaces.
                 </div>
                 <div class="pt-2 d-flex flex-row-reverse align-self-end">
                   <small class="show-more">Show More</small>
@@ -72,16 +84,22 @@
         <div class="col-lg-4 col-md-6 col-sm-12 p-3">
           <div class="card">
             <div class="d-flex justify-content-around image-container">
-              <img src="/images/logos/katieWiessfelt.png" class="card-img-top" alt="Personal Projects">
+              <img src="/images/logos/katieWiessfelt.png" class="card-img-top m-auto w-100 d-flex justify-content-around" alt="Personal Projects">
             </div>
             <div class="card-body">
               <h5 class="card-title">Personal Projects</h5>
               <div class="card-text">
                 <div class="snippet">
-                  
+                  A collection of personal projects showcasing design, problem-solving, and web development skills.
                 </div>
                 <div class="description">
-                  
+                  I enjoy exploring new technologies and sharpening my skills through personal projects. Highlights include:
+                  <ul>
+                    <li>Kattis problem repository: A collection of coding solutions to algorithmic challenges, focusing on problem-solving and clean code.</li>
+                    <li>Dog boarding and bakery website (sample project): Designed wireframes in Figma and built a responsive frontend in React to bring the concept to life.</li>
+                    <li>Personal website (this site): From Figma wireframes to frontend implementation, I designed and developed my own portfolio site to showcase my work.</li>
+                  </ul>
+                  These projects reflect my ability to learn independently, take ideas from concept to code, and apply both design and development practices across different contexts.
                 </div>
                 <div class="pt-2 d-flex flex-row-reverse align-self-end">
                   <small class="show-more">Show More</small>
@@ -90,7 +108,7 @@
             </div>
             <ul class="description list-group list-group-flush">
               <li class="list-group-item">Bed and Biscuits <small><a href="/projects/bed-and-biscuits">Wireframes</a> | <a href="https://github.com/katiewiessfelt/bed-and-biscuits">Github</a> | <a href="https://katiewiessfelt.github.io/bed-and-biscuits/">Site</a></small></li>
-              <li class="list-group-item">Portfolio <small><a href="https://github.com/katiewiessfelt/portfolio">Github</a> | <a href="#">Site</a></small></li>
+              <li class="list-group-item">Portfolio <small><a href="/projects/portfolio">Wireframes</a> | <a href="https://github.com/katiewiessfelt/portfolio">Github</a> | <a href="/">Site</a></small></li>
               <li class="list-group-item"><a href="https://github.com/katiewiessfelt/kattis">Kattis</a></li>
             </ul>
           </div>
@@ -128,12 +146,11 @@
   }
 
   a {
-    color: black;
-    text-decoration: underline;
+    color: var(--black);
   }
 
   .card {
-    color: black;
+    color: var(--black);
     box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
   }
 
@@ -179,19 +196,19 @@
   }
 
   #projects > div:nth-child(1n) > .card{
-    background-color: magenta;
+    background-color: var(--magenta);
   }
   #projects > div:nth-child(2n) > .card{
-    background-color: yellow;
+    background-color: var(--yellow);
   }
   #projects > div:nth-child(3n) > .card{
-    background-color: lime;
+    background-color: var(--green);
   }
   #projects > div:nth-child(4n) > .card{
-    background-color: blue;
+    background-color: var(--blue);
   }
   #projects > div:nth-child(5n) > .card{
-    background-color: BlueViolet;
+    background-color: var(--purple);
   }
 </style>
 
