--- a/views/projects/portfolio.ejs
+++ b/views/projects/portfolio.ejs
@@ -12,7 +12,7 @@
 <body>
   <%- include('../partials/header'); %>
     <div class="p-5">
-      <h2>Bed and Biscuits</h2>
+      <h2>Portfolio</h2>
       <h5>Wireframes created in Figma</h5>
     </div>
     <div class="d-flex justify-content-around mb-5">
@@ -21,52 +21,24 @@
           <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/projects/b&b/moodBoard.png" class="d-block w-100" alt="moodBoard.png">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Mood Board</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/b&b/home.png" class="d-block w-100" alt="home.png">
+            <img src="/images/projects/portfolio/Home.png" class="d-block w-100" alt="Home.png">
             <div class="carousel-caption d-none d-md-block">
               <h5>Home Page</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/projects/b&b/bakery.png" class="d-block w-100" alt="bakery.png">
+            <img src="/images/projects/portfolio/Experience.png" class="d-block w-100" alt="Experience.png">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Bakery</h5>
+              <h5>Experience</h5>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="/images/projects/b&b/menuDisplay.png" class="d-block w-100" alt="menuDisplay.png">
+            <img src="/images/projects/portfolio/Portfolio.png" class="d-block w-100" alt="Porfolio.png">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Menu Display</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/b&b/boarding.png" class="d-block w-100" alt="boarding.png">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Boarding</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/b&b/boardingMemberPage.png" class="d-block w-100" alt="boardingMemberPage.png">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Boarding Member Page</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/b&b/about.png" class="d-block w-100" alt="about.png">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>About Page</h5>
+              <h5>Portfolio</h5>
             </div>
           </div>
         </div>
@@ -99,11 +71,26 @@
   }
 
   .carousel {
-    max-width: 50%;
+    width: 30%;
+  }
+
+  /* large screen */
+  @media (max-width: 1024px) and (min-width: 641px) {
+    .carousel {
+      width: 50%;
+    }
+  }
+
+  /* small screen */
+  @media (max-width: 640px) {
+    .carousel {
+      width: 100%;
+    }
   }
 
   .carousel-inner {
     border-radius: 2em;
+    width: 100%;
     border: 1px solid white;
   }
 
