--- a/views/work_history.ejs
+++ b/views/work_history.ejs
@@ -213,26 +213,26 @@
     width: 25px;
     height: 25px;
     right: -13px;
-    background-color: black;
+    background-color: var(--black);
     top: 15px;
     border-radius: 50%;
     z-index: 1;
   }
 
   .timeline-container:nth-child(1n)::after {
-    border: 4px solid magenta;
+    border: 4px solid var(--magenta);
   }
   .timeline-container:nth-child(2n)::after {
-    border: 4px solid yellow;
+    border: 4px solid var(--yellow);
   }
   .timeline-container:nth-child(3n)::after {
-    border: 4px solid lime;
+    border: 4px solid var(--lime);
   }
   .timeline-container:nth-child(4n)::after {
-    border: 4px solid blue;
+    border: 4px solid var(--blue);
   }
   .timeline-container:nth-child(5n)::after {
-    border: 4px solid BlueViolet;
+    border: 4px solid var(--purple);
   }
 
   /* Place the container to the left */
