--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,16 +55,16 @@ h3 {
     inset: 0;
     padding: 10px; /* border thickness */
     background:
-      linear-gradient(to right, magenta, yellow) top,
-      linear-gradient(to bottom, yellow, lime) right,
-      linear-gradient(to left, lime, blue) bottom,
-      linear-gradient(to top, blue, magenta) left;
+      linear-gradient(to right, var(--magenta), var(--yellow)) top,
+      linear-gradient(to bottom, var(--yellow), var(--green)) right,
+      linear-gradient(to left, var(--green), var(--blue)) bottom,
+      linear-gradient(to top, var(--blue), var(--magenta)) left;
     background-size: 100% 10px, 10px 100%, 100% 10px, 10px 100%;
     background-repeat: no-repeat;
     background-origin: border-box;
     -webkit-mask:
-      linear-gradient(#fff 0 0) content-box,
-      linear-gradient(#fff 0 0);
+      linear-gradient(var(--white) 0 0) content-box,
+      linear-gradient(var(--white) 0 0);
     -webkit-mask-composite: xor;
             mask-composite: exclude;
     pointer-events: none;
@@ -113,7 +113,7 @@ img {
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
-  color: white;
+  color: var(--white);
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -165,7 +165,7 @@ img {
 }
 
 .btn-actions {
-  color: #fff;
+  color: var(--white);
   border-color: var(--magenta);
   box-shadow: 0 0 20px 1px var(--magenta);
   border-radius: 40px;
