--- a/views/work_history.ejs
+++ b/views/work_history.ejs
@@ -11,7 +11,7 @@
 
 <body>
   <%- include('partials/header'); %>
-    <div class="p-3">
+    <div class="p-3" id="work-history">
       <h2 class="p-4">Work History</h2>
       <div class="timeline">
         <div class="timeline-container left">
@@ -169,192 +169,6 @@
     <%- include('partials/footer'); %>
 </body>
 
-<style>
-  #title {
-    h4 {
-      text-transform: uppercase;
-    }
-
-    h5 {
-      font-style: italic;
-    }
-  }
-
-  /* The actual timeline (the vertical ruler) */
-  .timeline {
-    position: relative;
-    margin: 0 auto;
-  }
-
-  /* The actual timeline (the vertical ruler) */
-  .timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: white;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-  }
-
-  /* Container around content */
-  .timeline-container {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
-  }
-
-  /* The circles on the timeline */
-  .timeline-container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -13px;
-    background-color: var(--black);
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-  }
-
-  .timeline-container:nth-child(1n)::after {
-    border: 4px solid var(--magenta);
-  }
-  .timeline-container:nth-child(2n)::after {
-    border: 4px solid var(--yellow);
-  }
-  .timeline-container:nth-child(3n)::after {
-    border: 4px solid var(--lime);
-  }
-  .timeline-container:nth-child(4n)::after {
-    border: 4px solid var(--blue);
-  }
-  .timeline-container:nth-child(5n)::after {
-    border: 4px solid var(--purple);
-  }
-
-  /* Place the container to the left */
-  .left {
-    left: 0;
-  }
-
-  /* Place the container to the right */
-  .right {
-    left: 50%;
-  }
-
-  /* Add arrows to the left container (pointing right) */
-  .left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-  }
-
-  /* Add arrows to the right container (pointing left) */
-  .right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
-
-  /* Fix the circle for containers on the right side */
-  .right::after {
-    left: -13px;
-  }
-
-  .content {
-    padding: 20px 30px;
-    position: relative;
-    border-radius: 6px;
-  }
-
-  @media screen and (max-width: 1024px) {
-    .timeline-container {
-      width: 100%;
-    }
-
-    .timeline-container::after {
-      left: -13px;
-    }
-
-    .timeline::after {
-      left: 5%;
-    }
-
-    /* Place both container to the left */
-    .left, .right {
-      left: 5%;
-    }
-
-    /* Add arrows to the left container (pointing right) */
-    .left::before, .right::before {
-      content: " ";
-      height: 0;
-      position: absolute;
-      top: 22px;
-      width: 0;
-      z-index: 1;
-      left: 30px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
-    }
-
-    /* Fix the circle for containers on the right side */
-    .right::after {
-      left: -13px;
-    }
-  }
-
-  /* Media queries - Responsive timeline on screens less than 600px wide */
-  @media screen and (max-width: 600px) {
-
-    /* Place the timelime to the left */
-    .timeline::after {
-      left: 31px;
-    }
-
-    /* Full-width containers */
-    .timeline-container {
-      padding-left: 70px;
-      padding-right: 25px;
-    }
-
-    /* Make sure that all arrows are pointing leftwards */
-    .timeline-container::before {
-      left: 60px;
-      border: medium solid white;
-      border-width: 10px 10px 10px 0;
-      border-color: transparent white transparent transparent;
-    }
-
-    /* Make sure all circles are at the same spot */
-    .left::after,
-    .right::after {
-      left: 15px;
-    }
-
-    /* Make all right containers behave like the left ones */
-    .right {
-      left: 0%;
-    }
-  }
-</style>
+<link rel="stylesheet" href="/css/work_history.css">
 
 </html>
