--- a/views/home.ejs
+++ b/views/home.ejs
@@ -86,7 +86,7 @@
   <%- include('partials/footer'); %>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-    $('button').on('click', function() {
+    $('.overlay button').on('click', function() {
       window.location = $(this).data('src')
     })
   </script>
