implement scss and add head to partials

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,4 @@
-hr.thick-hr {
+#home hr.thick-hr {
   /* Adjust the value for desired thickness */
   height: 3px;
   /* Optional: set a background color */
@@ -6,109 +6,92 @@ hr.thick-hr {
   /* Remove default border */
   border: none;
 }
-
-.skill-box {
+#home .skill-box {
   text-align: center;
 }
-
-h3 {
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-
-@media (max-width: 1024px) {
-  h2 {
-    width: 33.33333333% !important;
-  }
-}
-
 @media (max-width: 768px) {
-  /* @media (max-width: 768px) and (min-width: 600px) { */
-  /* small screen */
-  #skills {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .skill-box {
+  #home .skill-box {
+    /* small screen */
     padding: 5em 10em;
   }
-
-  .skill-box:nth-child(2) {
+  #home .skill-box:nth-child(2) {
     border-top: 5px solid var(--cyan);
     border-bottom: 5px solid var(--cyan);
   }
-
-  .header-accent {
-    display: none;
+}
+@media (min-width: 769px) {
+  #home .skill-box {
+    /* large screen */
+    padding: 3em;
   }
-
-  #accent-border {
-    position: relative;
-    padding: 2rem;
-    background: none; /* inner bg */
-  }
-
-  #accent-border::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    padding: 10px; /* border thickness */
-    background:
-      linear-gradient(to right, var(--magenta), var(--yellow)) top,
-      linear-gradient(to bottom, var(--yellow), var(--green)) right,
-      linear-gradient(to left, var(--green), var(--blue)) bottom,
-      linear-gradient(to top, var(--blue), var(--magenta)) left;
-    background-size: 100% 10px, 10px 100%, 100% 10px, 10px 100%;
-    background-repeat: no-repeat;
-    background-origin: border-box;
-    -webkit-mask:
-      linear-gradient(var(--white) 0 0) content-box,
-      linear-gradient(var(--white) 0 0);
-    -webkit-mask-composite: xor;
-            mask-composite: exclude;
-    pointer-events: none;
-  }
-
-  #actions-mobile {
-    margin-top: 3em;
-    margin-bottom: 3em;
+  #home .skill-box:nth-child(2) {
+    border-left: 5px solid var(--cyan);
+    border-right: 5px solid var(--cyan);
   }
 }
-
+#home h3 {
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
 @media (min-width: 769px) {
-  /* large screen */
-  #skills {
+  #home #skills {
+    /* large screen */
     display: flex;
     flex-direction: row;
     margin-top: 4em;
   }
-
-  .skill-box:nth-child(2) {
-    border-left: 5px solid var(--cyan);
-    border-right: 5px solid var(--cyan);
-  }
-
-  .skill-box {
-    padding: 3em;
+}
+@media (max-width: 768px) {
+  #home #skills {
+    /* small screen */
+    display: flex;
+    flex-direction: column;
   }
 }
-
-img {
+@media (max-width: 1024px) {
+  #home h2 {
+    width: 33.33333333% !important;
+  }
+}
+@media (max-width: 768px) {
+  #home .header-accent {
+    /* small screen */
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  #home #accent-border {
+    position: relative;
+    padding: 2rem;
+    background: none; /* inner bg */
+  }
+  #home #accent-border::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    padding: 10px; /* border thickness */
+    background: linear-gradient(to right, var(--magenta), var(--yellow)) top, linear-gradient(to bottom, var(--yellow), var(--green)) right, linear-gradient(to left, var(--green), var(--blue)) bottom, linear-gradient(to top, var(--blue), var(--magenta)) left;
+    background-size: 100% 10px, 10px 100%, 100% 10px, 10px 100%;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    -webkit-mask: linear-gradient(var(--white) 0 0) content-box, linear-gradient(var(--white) 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+    pointer-events: none;
+  }
+}
+#home img {
   height: 10em;
 }
-
-.image-wrapper {
+#home .image-wrapper {
   position: relative;
 }
-
-.image-wrapper img {
+#home .image-wrapper img {
   width: 100vw;
   height: auto;
   display: block;
 }
-
-.overlay {
+#home .overlay {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -118,53 +101,49 @@ img {
   display: flex;
   justify-content: space-around;
 }
-
-#actions-mobile {
-  display: none;
-}
-
-#main, #main > div {
-  padding-right: 0;
-  padding-left: 0;
-}
-
-@media (max-width: 1024px) and (min-width: 769px) {
-  .overlay {
-    top: 35%;
-    left: 50%;
-    flex-direction: column;
-  }
-
-  .overlay > div {
-    margin-bottom: 3em;
-  }
-
-  #actions-mobile {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  #actions {
-    display: none;
-  }
-
-  .btn-actions {
-    margin-bottom: 3em;
-  }
-
-  #actions-mobile {
-    display: flex;
-  }
-}
-
-.overlay > div {
+#home .overlay > div {
   display: flex;
   justify-content: space-around;
   width: 100%;
 }
-
-.btn-actions {
+@media (max-width: 1024px) and (min-width: 769px) {
+  #home .overlay > div {
+    margin-bottom: 3em;
+  }
+}
+@media (max-width: 1024px) and (min-width: 769px) {
+  #home .overlay {
+    top: 35%;
+    left: 50%;
+    flex-direction: column;
+  }
+}
+#home #actions-mobile {
+  display: none;
+}
+@media (max-width: 768px) {
+  #home #actions-mobile {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    display: flex;
+  }
+}
+@media (max-width: 1024px) and (min-width: 769px) {
+  #home #actions-mobile {
+    display: none;
+  }
+}
+#home > #main,
+#home > #main > div {
+  padding-right: 0;
+  padding-left: 0;
+}
+@media (max-width: 768px) {
+  #home #actions {
+    display: none;
+  }
+}
+#home .btn-actions {
   color: var(--white);
   border-color: var(--magenta);
   box-shadow: 0 0 20px 1px var(--magenta);
@@ -172,25 +151,14 @@ img {
   white-space: nowrap;
   width: 20em;
 }
-
-.btn > h3 {
+@media (max-width: 768px) {
+  #home .btn-actions {
+    margin-bottom: 3em;
+  }
+}
+#home .btn > h3 {
   margin: 0;
   padding: 0.5em 1em;
 }
 
-
-/* small screen */
-@media (max-width: 640px) {
-}
-/* medium screen */
-@media (max-width: 768px) and (min-width: 641px) {
-}
-/* large screen */
-@media (max-width: 1024px) and (min-width: 769px) {
-}
-/* xl screen */
-@media (max-width: 1536px) and (min-width: 1025px) {
-}
-/* xxl screen */
-@media (min-width: 1537px) {
-}
+/*# sourceMappingURL=index.css.map */
