--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,24 +1,3 @@
-<!-- <div id="header" class="row">
-    <div class="d-flex flex-row-reverse">
-        <i class="fa-solid fa-bars fa-3x"></i>
-    </div>
-</div>
-
-<style>
-
-#header {
-  padding: 1em;
-}
-
-#header a {
-  color: white;
-  font-size: 30px;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-
-</style> -->
-
 <div id="header" class="row">
   <div class="d-flex flex-row justify-content-around my-3">
     <div class="btn-group">
@@ -53,6 +32,7 @@
         </small>
       </li>
       </ul></small>
+      <li><a class="dropdown-item" href="/projects/TIBI">TIBI</a></li>
       <li><a class="dropdown-item" href="https://github.com/katiewiessfelt/kattis">Kattis</a></li>
       </ul>
     </div>
