--- a/views/projects/TIBI.ejs
+++ b/views/projects/TIBI.ejs
@@ -1,154 +1,155 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>
-    <%= title %>
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%- include('../partials/styles'); %>
-</head>
+<%- include('../partials/head'); %>
 
-<body>
-  <%- include('../partials/header'); %>
-    <div class="p-5">
-      <h2>TIBI</h2>
-      <h5>Wireframes created in Figma</h5>
-    </div>
-    <div class="d-flex justify-content-around">
-      <div class="w-50">
-        <h3 class="p-2">Login</h3>
-      </div>
-    </div>
-    <div class="d-flex justify-content-around mb-5">
-      <div id="carouselLogin" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+  <body>
+    <%- include('../partials/header'); %>
+      <div id="tibi">
+        <div class="p-5">
+          <h2>TIBI</h2>
+          <h5>Wireframes created in Figma</h5>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/projects/TIBI/login1.png" class="d-block w-100" alt="login1.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login2.png" class="d-block w-100" alt="login2.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login3.png" class="d-block w-100" alt="login3.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login4.png" class="d-block w-100" alt="login4.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login5.png" class="d-block w-100" alt="login5.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login6.png" class="d-block w-100" alt="login6.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/login7.png" class="d-block w-100" alt="login7.png">
+        <div class="d-flex justify-content-around">
+          <div class="w-50">
+            <h3 class="p-2">Login</h3>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselLogin" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselLogin" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-    </div>
-    <div class="d-flex justify-content-around">
-      <div class="w-50">
-        <h3 class="p-2">Dashboard</h3>
-      </div>
-    </div>
-    <div class="d-flex justify-content-around mb-5">
-      <div id="carouselDashboard" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-          <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/images/projects/TIBI/dashboard1.png" class="d-block w-100" alt="dashboard1.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard2.png" class="d-block w-100" alt="dashboard2.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard3.png" class="d-block w-100" alt="dashboard3.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard4.png" class="d-block w-100" alt="dashboard4.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard5.png" class="d-block w-100" alt="dashboard5.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard6.png" class="d-block w-100" alt="dashboard6.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard7.png" class="d-block w-100" alt="dashboard7.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard8.png" class="d-block w-100" alt="dashboard8.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard9.png" class="d-block w-100" alt="dashboard9.png">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/projects/TIBI/dashboard10.png" class="d-block w-100" alt="dashboard10.png">
+        <div class="d-flex justify-content-around mb-5">
+          <div id="carouselLogin" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/projects/TIBI/login1.png" class="d-block w-100" alt="login1.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login2.png" class="d-block w-100" alt="login2.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login3.png" class="d-block w-100" alt="login3.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login4.png" class="d-block w-100" alt="login4.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login5.png" class="d-block w-100" alt="login5.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login6.png" class="d-block w-100" alt="login6.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/login7.png" class="d-block w-100" alt="login7.png">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselLogin" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselLogin" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselDashboard" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselDashboard" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="d-flex justify-content-around">
+          <div class="w-50">
+            <h3 class="p-2">Dashboard</h3>
+          </div>
+        </div>
+        <div class="d-flex justify-content-around mb-5">
+          <div id="carouselDashboard" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="7"
+                aria-label="Slide 8"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="8"
+                aria-label="Slide 9"></button>
+              <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="9"
+                aria-label="Slide 10"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/projects/TIBI/dashboard1.png" class="d-block w-100" alt="dashboard1.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard2.png" class="d-block w-100" alt="dashboard2.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard3.png" class="d-block w-100" alt="dashboard3.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard4.png" class="d-block w-100" alt="dashboard4.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard5.png" class="d-block w-100" alt="dashboard5.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard6.png" class="d-block w-100" alt="dashboard6.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard7.png" class="d-block w-100" alt="dashboard7.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard8.png" class="d-block w-100" alt="dashboard8.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard9.png" class="d-block w-100" alt="dashboard9.png">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/projects/TIBI/dashboard10.png" class="d-block w-100" alt="dashboard10.png">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselDashboard"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselDashboard"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <%- include('../partials/footer'); %>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script src="/js/bootstrap.bundle.min.js"></script>
-      <script type="module">
-        $(document).on('click', 'img', function() {
-          window.open(this.src);
-        })
-      </script>
-</body>
+      <link rel="stylesheet" href="/css/projects.css">
 
-<style>
-  .carousel {
-    max-width: 50%;
-  }
+      <%- include('../partials/footer'); %>
+  </body>
 
-  .carousel-inner {
-    border-radius: 2em;
-    border: 1px solid white;
-  }
-
-  .carousel-item > img {
-    cursor: pointer;
-  }
-</style>
+  <script type="module">
+    $(document).on('click', 'img', function () {
+      window.open(this.src);
+    })
+  </script>
 
 </html>
