--- a/views/work_history.ejs
+++ b/views/work_history.ejs
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>
-    <%= title %>
-  </title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%- include('partials/styles'); %>
-</head>
+<%- include('partials/head'); %>
 
 <body>
   <%- include('partials/header'); %>
