--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
     <div class="d-flex flex-column text-center py-4">
         <p class="h3">Katie Wiessfelt</p>
         <p class="h4">Web Developer</p>
-        <p class="h4"><a href="mailto: wiessfeltk90@gmail.com">Contact me</a></p>
+        <p class="h4"><a href="mailto: wiessfeltk90@gmail.com">wiessfeltk89@gmail.com</a></p>
     </div>
 </div>
 
