--- a/views/projects/TIBI.ejs
+++ b/views/projects/TIBI.ejs
@@ -11,7 +11,7 @@
           <h5>Wireframes created in Figma</h5>
         </div>
         <div class="d-flex justify-content-around">
-          <div class="w-50">
+          <div class="carousel-title">
             <h3 class="p-2">Login</h3>
           </div>
         </div>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-around">
-          <div class="w-50">
+          <div class="carousel-title">
             <h3 class="p-2">Dashboard</h3>
           </div>
         </div>
