--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -60,61 +60,28 @@
   }
 }
 
-#portfolio .carousel-caption {
+.carousel, .carousel-title {
+  width: 75%;
+}
+@media (max-width: 1024px) {
+  .carousel, .carousel-title {
+    width: 80%;
+  }
+}
+
+.carousel-caption {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   right: unset;
   left: unset;
 }
-#portfolio .carousel {
-  width: 30%;
-}
-@media (max-width: 1024px) and (min-width: 641px) {
-  #portfolio .carousel {
-    /* large screen */
-    width: 50%;
-  }
-}
-@media (max-width: 640px) {
-  #portfolio .carousel {
-    /* small screen */
-    width: 100%;
-  }
-}
-#portfolio .carousel-inner {
+
+.carousel-inner {
   border-radius: 2em;
-  width: 100%;
   border: 1px solid white;
-}
-#portfolio .carousel-item > img {
-  cursor: pointer;
 }
 
-#bnb .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.5);
-  width: 100%;
-  right: unset;
-  left: unset;
-}
-#bnb .carousel {
-  max-width: 50%;
-}
-#bnb .carousel-inner {
-  border-radius: 2em;
-  border: 1px solid white;
-}
-#bnb .carousel-inner > img {
-  cursor: pointer;
-}
-
-#tibi .carousel {
-  max-width: 50%;
-}
-#tibi .carousel-inner {
-  border-radius: 2em;
-  border: 1px solid white;
-}
-#tibi .carousel-item > img {
+.carousel-item > img {
   cursor: pointer;
 }
 
