remove auto scroll from carousel

--- a/views/projects/bed&biscuits.ejs
+++ b/views/projects/bed&biscuits.ejs
@@ -11,7 +11,7 @@
         <h5>Wireframes created in Figma</h5>
       </div>
       <div class="d-flex justify-content-around mb-5">
-        <div id="carouselWireframes" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="carouselWireframes" class="carousel slide carousel-fade">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselWireframesCaptions" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
