--- a/views/projects/TIBI.ejs
+++ b/views/projects/TIBI.ejs
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-around mb-5">
-          <div id="carouselLogin" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div id="carouselLogin" class="carousel slide carousel-fade">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselLoginCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-around mb-5">
-          <div id="carouselDashboard" class="carousel slide carousel-fade" data-bs-ride="carousel">
+          <div id="carouselDashboard" class="carousel slide carousel-fade">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselDashboardCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
