fix portfolio card

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -88,9 +88,9 @@
                 <div class="description">
                   I enjoy exploring new technologies and sharpening my skills through personal projects. Highlights include:
                   <ul>
-                    <li>Kattis problem repository: A collection of coding solutions to algorithmic challenges, focusing on problem-solving and clean code.</li>
                     <li>Dog boarding and bakery website (sample project): Designed wireframes in Figma and built a responsive frontend in React to bring the concept to life.</li>
-                    <li>Personal website (this site): From Figma wireframes to frontend implementation, I designed and developed my own portfolio site to showcase my work.</li>
+                    <li>Portfolio (this site): From Figma wireframes to frontend implementation, I designed and developed my own portfolio site using express.js to showcase my work.</li>
+                    <li>Kattis problem repository: A collection of coding solutions to algorithmic challenges, focusing on problem-solving and clean code.</li>
                   </ul>
                   These projects reflect my ability to learn independently, take ideas from concept to code, and apply both design and development practices across different contexts.
                 </div>
@@ -100,9 +100,9 @@
               </div>
             </div>
             <ul class="description list-group list-group-flush">
-              <li class="list-group-item">Bed and Biscuits <small><a href="/projects/bed-and-biscuits">Wireframes</a> | <a href="https://github.com/katiewiessfelt/bed-and-biscuits">Github</a> | <a href="https://katiewiessfelt.github.io/bed-and-biscuits/">Site</a></small></li>
-              <li class="list-group-item">Portfolio <small><a href="/projects/portfolio">Wireframes</a> | <a href="https://github.com/katiewiessfelt/portfolio">Github</a> | <a href="/">Site</a></small></li>
-              <li class="list-group-item"><a href="https://github.com/katiewiessfelt/kattis">Kattis</a></li>
+              <li class="list-group-item"><span class="text-uppercase h6 pe-2">Bed and Biscuits</span><small><a href="/projects/bed-and-biscuits">Wireframes</a> | <a href="https://github.com/katiewiessfelt/bed-and-biscuits">Github</a> | <a href="https://katiewiessfelt.github.io/bed-and-biscuits/">Site</a></small></li>
+              <li class="list-group-item"><span class="text-uppercase h6 pe-2">Portfolio</span><small><a href="/projects/portfolio">Wireframes</a> | <a href="https://github.com/katiewiessfelt/portfolio">Github</a> | <a href="/">Site</a></small></li>
+              <li class="list-group-item"><span class="text-uppercase h6 pe-2">Kattis</span><small><a href="https://github.com/katiewiessfelt/kattis">Github</a></small></li>
             </ul>
           </div>
         </div>
