--- a/views/about.ejs
+++ b/views/about.ejs
@@ -21,6 +21,10 @@
         beautiful website that not only looks great but also fulfills a function people really need.
       </p>
     </div>
+
+    <div class="mw-100">
+      <img class="mw-100" src="/images/ad.png" />
+    </div>
   </div>
 
   <%- include('partials/footer'); %>
